--- a/ui/flask/templates/base.html
+++ b/ui/flask/templates/base.html
@@ -171,6 +171,7 @@
 <script src="/static/js/configure.js"></script>
 <script src="/static/js/custom.js"></script>
 <script src="/static/js/action.js"></script>
+<script src="/static/js/cases.js"></script>
 <script src="/static/js/main.js"></script>
 <script src="/static/js/jquery-confirm.min.js"></script>
 {% endblock %}
