--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -4,39 +4,6 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-        <!--<div class="col-sm-3 col-md-2 sidebar">-->
-        <!--<ul class="nav nav-sidebar">-->
-        <!--<li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>-->
-        <!--<li><a href="#">1. Script Creator</a></li>-->
-        <!--<li><a href="#">2. Result Reviewer</a></li>-->
-        <!--</ul>-->
-        <!--</div>-->
-        <!--<div class="col-md-2 sidebar">-->
-        <!--{% block sidebar %}-->
-        <!--<div class="panel panel-default">-->
-        <!--&lt;!&ndash; Default panel contents &ndash;&gt;-->
-        <!--<div class="panel-heading">Server(s)</div>-->
-        <!--<ul class="list-group">-->
-        <!--{% for view in side_bar_set %}-->
-        <!--<li class="list-group-item"><a href="/?{{PRARAM_VIEW}}={{view}}">{{view}}</a></li>-->
-        <!--{% endfor %}-->
-        <!--</ul>-->
-        <!--</div>-->
-        <!--{% endblock %}-->
-        <!--{% block no_result %}-->
-        <!--{% if list_no_result.__len__() > 0 %}-->
-        <!--<div class="panel panel-default">-->
-        <!--&lt;!&ndash; Default panel contents &ndash;&gt;-->
-        <!--<div class="panel-heading">In running or just pending</div>-->
-        <!--<ul class="list-group" style="font-size: 8px">-->
-        <!--{% for job_name in list_no_result %}-->
-        <!--<li class="list-group-item">{{job_name.keys()[0]}}</li>-->
-        <!--{% endfor %}-->
-        <!--</ul>-->
-        <!--</div>-->
-        <!--{% endif %}-->
-        <!--{% endblock %}-->
-        <!--</div>-->
         <script type=text/javascript>
             var jsonUiMap = eval('(' + {{ json_ui_map|tojson }} + ')');
             var jsonUiMapPages = jsonUiMap.pages.page;
@@ -84,7 +51,7 @@
                                             <ul class="dropdown-menu" id="ul_pages">
                                             </ul>
                                         </div>
-                                        <input type="text" name="input_new_page" id="input_new_page" class="form-control" placeholder="Add new page. For example: PageHome OR Page_home" aria-describedby="NewPageName"/>
+                                        <input type="text" name="input_new_page" id="input_new_page" class="form-control" placeholder="Add a new page. For example: PageHome OR Page_home" aria-describedby="NewPageName"/>
                                     </div>
                                 </td>
                                 <td>
@@ -103,7 +70,7 @@
                                             <ul class="dropdown-menu" id="ul_subpages">
                                             </ul>
                                         </div>
-                                        <input type="text" name="input_new_subpage" id="input_new_subpage" class="form-control" placeholder="Add new sub page. For example: PageABC OR Page_abc"
+                                        <input type="text" name="input_new_subpage" id="input_new_subpage" class="form-control" placeholder="Add a new sub page. For example: PageABC OR Page_abc"
                                                aria-describedby="NewSubPageName"/>
                                     </div>
                                 </td>
@@ -122,7 +89,7 @@
                                             <ul class="dropdown-menu" id="ul_elements">
                                             </ul>
                                         </div>
-                                        <input type="text" name="input_new_element" id="input_new_element" class="form-control" placeholder="Add new element. For example: btnNext OR btn_next"
+                                        <input type="text" name="input_new_element" id="input_new_element" class="form-control" placeholder="Add a new element. For example: btnNext OR btn_next"
                                                aria-describedby="NewElement"/>
                                     </div>
                                 </td>
@@ -138,37 +105,59 @@
             </div>
         </div>
         <div class="col-md-12 main">
+            <table id='table_switch_cases' class="table table-striped table-hover table-condensed table-bordered">
+                <tr>
+                    <td>
+                        <div class="input-group">
+                            <div class="input-group-btn">
+                                <button id="button_select_case_set" style="width:350px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Select Case Set
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" id="ul_case_set">
+                                </ul>
+                            </div>
+                            <input type="text" name="input_new_case_set" id="input_new_case_set" class="form-control" placeholder="Add a case set. For example: CaseSet OR Case_Set" aria-describedby="NewCaseSet"/>
+                        </div>
+                    </td>
+                    <td>
+                        <a id="button_add_new_case_set" href="#" class="glyphicon glyphicon-plus"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="input-group">
+                            <div class="input-group-btn">
+                                <button id="button_select_case" style="width:350px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                                        aria-expanded="false">
+                                    Select Case
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" id="ul_case">
+                                </ul>
+                            </div>
+                            <input type="text" name="input_new_case" id="input_new_case" class="form-control" placeholder="Add a new case. For example: Case1 OR Case_1"
+                                   aria-describedby="NewCse"/>
+                        </div>
+                    </td>
+                    <td>
+                        <a id="button_add_new_case" href="#" class="glyphicon glyphicon-plus"/>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="col-md-9 main">
             {% block right_content %}
-            <!--<table class="table table-striped  table-hover table-condensed table-bordered">-->
-            <!--<tr>-->
-            <!--<td>-->
-            <!--<div class="input-group">-->
-            <!--<div class="input-group-btn">-->
-            <!--<button id="button_select_page" style="width:200px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select Page-->
-            <!--<span class="caret"></span>-->
-            <!--</button>-->
-            <!--<ul class="dropdown-menu" id="ul_page_names">-->
-            <!--&lt;!&ndash;{% for page_name in xxxx %}&ndash;&gt;-->
-            <!--&lt;!&ndash;<li><a href="#">{{page_name}}</a></li>&ndash;&gt;-->
-            <!--&lt;!&ndash;{% endfor %}&ndash;&gt;-->
-            <!--</ul>-->
-            <!--</div>&lt;!&ndash; /btn-group &ndash;&gt;-->
-            <!--<input type="text" name="input_new_page" id="input_new_page" class="form-control" placeholder="Add new page. For example: PageHome OR Page_home" aria-describedby="NewPageName"/>-->
-            <!--</div>-->
-            <!--</td>-->
-            <!--<td style="width:80px;">-->
-            <!--<button class="btn btn-default" type="button">Save</button>-->
-            <!--</td>-->
-            <!--</tr>-->
-            <!--</table>-->
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3 class="panel-title">
-                        <span>Add case(s):</span>
+                        <span>
+                            case(s)
+                        </span>
                     </h3>
                 </div>
                 <div class="panel-body">
-                    <div class="col-sm-9 col-md-9" style="overflow: auto; height: auto;">
+                    <div style="overflow: auto; height: auto;">
                         <table id='table_cases' class="table table-striped  table-hover table-condensed table-bordered" style="border:1px solid #f2dede; height: auto;">
                             <tbody>
                             <tr>
@@ -196,6 +185,34 @@
                 </div>
             </div>
             {% endblock %}
+        </div>
+        <div class="col-md-3 sidebar">
+            <div class="panel panel-primary">
+                <div class="panel-heading">Actions:</div>
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="dropdown">
+                                    <!--<button class="btn btn-default dropdown-toggle" type="button" id="dropdown_cases_name" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">-->
+                                        <!--Select Case Set-->
+                                        <!--<span class="caret"></span>-->
+                                    <!--</button>-->
+                                    <!--<ul class="dropdown-menu" aria-labelledby="dropdown_locatorName" style="height:500px;overflow:auto;">-->
+                                        <!--<li class="list-group-item">-->
+                                            <!--<a>1</a>-->
+                                        <!--</li>-->
+                                    <!--</ul>-->
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="disabled">Review Results</td>
+                            </tr>
+                            <tr>
+                                <td class="disabled">Package for DevicePass</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
         </div>
     </div>
 </div>
