--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -111,8 +111,7 @@
                         <div class="input-group">
                             <div class="input-group-btn">
                                 <button id="button_select_case_set" style="width:350px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Select Case Set
-                                    <span class="caret"></span>
+                                    Select Case Set<span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" id="ul_case_set">
                                 </ul>
@@ -130,14 +129,13 @@
                             <div class="input-group-btn">
                                 <button id="button_select_case" style="width:350px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                                         aria-expanded="false">
-                                    Select Case
-                                    <span class="caret"></span>
+                                    Select Case<span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" id="ul_case">
                                 </ul>
                             </div>
                             <input type="text" name="input_new_case" id="input_new_case" class="form-control" placeholder="Add a new case. For example: Case1 OR Case_1"
-                                   aria-describedby="NewCse"/>
+                                   aria-describedby="NewCase"/>
                         </div>
                     </td>
                     <td>
@@ -152,7 +150,7 @@
                 <div class="panel-heading">
                     <h3 class="panel-title">
                         <span>
-                            case(s)
+                            Step(s):
                         </span>
                     </h3>
                 </div>
